# NoLaPad

./: .gitignore  .gitmodules  AudioBlockInfo.h  AudioSampleSelector.cpp  AudioSampleSelector.h  BPM.cpp  BPM.h  BPMCounter.cpp  BPMCounter.h  BeatCheckBox.cpp  BeatCheckBox.h  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  DigitalClockFace.cpp  DigitalClockFace.h  Effects.h  EffectsSwitcher.cpp  EffectsSwitcher.h  ElidedLabel.cpp  ElidedLabel.h  Fader.cpp  Fader.h  IAudioEngine.h  IMetronomePlayer.h  IPlayer.h  IRecorder.h  IStorage.h  ITrackPlayer.h  JSONStorage.cpp  JSONStorage.h  JUCEAudioEngine.cpp  JUCEAudioEngine.h  JUCEMetronomePlayer.cpp  JUCEMetronomePlayer.h  JUCERecorder.cpp  JUCERecorder.h  JUCETrackPlayer.cpp  JUCETrackPlayer.h  LCDCounter.cpp  (+51 more)
projects/: Project 1.json  Project1.json
projectsViews/: views.json
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/mocks/: MockAudioEngine.h  MockStorage.h  MockTrackPlayer.h
tests/unit/: CMakeLists.txt  test_jsonstorage.cpp  test_jucerecorder.cpp  test_microtimer.cpp  test_project.cpp  test_projectmanager.cpp  test_recorder.cpp  test_track.cpp
